Added pre-main setup action

--- a/action.yml
+++ b/action.yml
@@ -12,4 +12,5 @@ inputs:
     default: ${{ github.event.number }}
 runs:
   using: 'node16'
-  main: 'dist/index.js'
+  main: 'dist/main/index.js'
+  pre: 'dist/setup/setup.js'
