--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,9 @@ inputs:
     description: Default tag
     required: false
     default: v0.0.0
+outputs:
+  tag:
+    description: "New tag"
 runs:
   using: 'node16'
   main: 'dist/main/index.js'
