Rewritten on Go

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,6 @@
 version: 2
 updates:
-  - package-ecosystem: action-actions
+  - package-ecosystem: gh-actions
     directory: /
     schedule:
       interval: daily
