--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,4 +11,4 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./
         with:
-          github-token: {{ secrets.GH_PAT }}
+          github-token: "${{ secrets.GH_PAT }}"
